--- a/index.html
+++ b/index.html
@@ -201,8 +201,7 @@
             <div class="col-md-12">
             <div class="section-header text-center pb-5">
                 <h2>EXPLORE LAPTOP SERIES</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
-            dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. I</p>
+                <p>These unconventional laptops with a distinctive design and stylish colors represent your personality, attitude and lifestyle.</p>
             </div>    
             </div>
           </div>
@@ -291,8 +290,7 @@
       <div class="col-md-12">
       <div class="section-header text-center pb-5">
           <h2>EXPLORE GAMING PHONES</h2>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
-      dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. I</p>
+          <p>These unconventional laptops with a distinctive design and stylish colors represent your personality, attitude and lifestyle. I</p>
       </div>    
       </div>
     </div>
